<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Calculator_main_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="413dp"
        android:layout_height="409dp"
        android:layout_marginTop="322dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/c"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="@drawable/custom_shape"
                android:text="@string/ac"
                android:textColor="#FFC107"
                android:textSize="40sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/clear"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="@drawable/custom_shape"
                android:text="@string/clear"
                android:textColor="#FFC107"
                android:textSize="40sp"
                android:textStyle="normal" />


            <Button
                android:id="@+id/percentage"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="@drawable/custom_shape"
                android:text="@string/percentage"
                android:textColor="#FFC107"
                android:textSize="40sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/divide"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="@drawable/custom_shape"
                android:text="@string/divide"
                android:textColor="#FFC107"
                android:textSize="40sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/seven"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="@drawable/custom_shape"
                android:text="@string/_7"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/eight"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="@drawable/custom_shape"
                android:text="@string/_8"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/nine"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="@drawable/custom_shape"
                android:text="@string/_9"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/multiplication"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="@drawable/custom_shape"
                android:text="@string/multiplication"
                android:textColor="#FFC107"
                android:textSize="40sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/four"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="@drawable/custom_shape"
                android:text="@string/_4"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/five"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="@drawable/custom_shape"
                android:text="@string/_5"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/six"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="@drawable/custom_shape"
                android:text="@string/_6"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/substract"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="@drawable/custom_shape"
                android:text="@string/substract"
                android:textColor="#FFC107"
                android:textSize="40sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/one"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="@drawable/custom_shape"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/two"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="@drawable/custom_shape"
                android:text="@string/_2"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/three"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="@drawable/custom_shape"
                android:text="@string/_3"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/plus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="@drawable/custom_shape"
                android:text="@string/plua"
                android:textColor="#FFC107"
                android:textSize="40sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/cautious"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="@drawable/custom_shape"
                android:text="@string/info"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <Button
                android:id="@+id/zero"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="@drawable/custom_shape"
                android:text="@string/_0"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/dot"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="@drawable/custom_shape"
                android:text="@string/dot"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/equal"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="@drawable/custom_shape"
                android:text="@string/equal"
                android:textColor="#FFC107"
                android:textSize="40sp"
                android:textStyle="bold" />

        </TableRow>
    </TableLayout>


    <View
        android:id="@+id/horizontalline"
        android:layout_width="390dp"
        android:layout_height="2dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="297dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="13dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/display"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="12dp"
        android:autoSizeMaxTextSize="40sp"
        android:autoSizeMinTextSize="34sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:gravity="right"
        android:maxLength="20"
        android:maxLines="2"
        android:minHeight="48dp"
        android:text="@string/_0"
        android:textColor="#F6F5F5"
        android:textIsSelectable="true"
        android:textSize="40sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/horizontalline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.875" />

</androidx.constraintlayout.widget.ConstraintLayout>